Partially cleaned data

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -132,34 +132,139 @@
        "      <td>3</td>\n",
        "      <td>tbd</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9116</td>\n",
+       "      <td>It Happened One Night</td>\n",
+       "      <td>22-Feb-34</td>\n",
+       "      <td>Comedy,Romance</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9117</td>\n",
+       "      <td>King Kong</td>\n",
+       "      <td>7-Apr-33</td>\n",
+       "      <td>Adventure,Sci-Fi,Horror</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9118</td>\n",
+       "      <td>Frankenstein</td>\n",
+       "      <td>21-Nov-31</td>\n",
+       "      <td>Sci-Fi,Drama,Horror</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9119</td>\n",
+       "      <td>City Lights</td>\n",
+       "      <td>7-Mar-31</td>\n",
+       "      <td>Drama,Comedy,Romance</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>99</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9120</td>\n",
+       "      <td>All Quiet on the Western Front</td>\n",
+       "      <td>24-Aug-30</td>\n",
+       "      <td>Drama,War</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>91</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>9121 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           movie_title release_date                         genre  meta_mixed  \\\n",
-       "0  Anatomy of a Murder     1-Jul-59  Drama,Mystery,Thriller,Crime           0   \n",
-       "1     Bringing Up Baby    18-Feb-38         Comedy,Romance,Family           0   \n",
-       "2           After Life    12-May-99                 Drama,Fantasy           0   \n",
-       "3              Gavagai     3-Aug-18                         Drama           1   \n",
-       "4          The Hustler    25-Sep-61                   Drama,Sport           1   \n",
+       "                         movie_title release_date  \\\n",
+       "0                Anatomy of a Murder     1-Jul-59   \n",
+       "1                   Bringing Up Baby    18-Feb-38   \n",
+       "2                         After Life    12-May-99   \n",
+       "3                            Gavagai     3-Aug-18   \n",
+       "4                        The Hustler    25-Sep-61   \n",
+       "...                              ...          ...   \n",
+       "9116           It Happened One Night    22-Feb-34   \n",
+       "9117                       King Kong     7-Apr-33   \n",
+       "9118                    Frankenstein    21-Nov-31   \n",
+       "9119                     City Lights     7-Mar-31   \n",
+       "9120  All Quiet on the Western Front    24-Aug-30   \n",
        "\n",
-       "   meta_negative  meta_positive  metascore  user_mixed  user_negative  \\\n",
-       "0              0             15         95           0              0   \n",
-       "1              1             16         91           1              0   \n",
-       "2              0             19         91           0              2   \n",
-       "3              0              6         91           0              1   \n",
-       "4              0             17         90           0              0   \n",
+       "                             genre  meta_mixed  meta_negative  meta_positive  \\\n",
+       "0     Drama,Mystery,Thriller,Crime           0              0             15   \n",
+       "1            Comedy,Romance,Family           0              1             16   \n",
+       "2                    Drama,Fantasy           0              0             19   \n",
+       "3                            Drama           1              0              6   \n",
+       "4                      Drama,Sport           1              0             17   \n",
+       "...                            ...         ...            ...            ...   \n",
+       "9116                Comedy,Romance           0              0             16   \n",
+       "9117       Adventure,Sci-Fi,Horror           1              0             11   \n",
+       "9118           Sci-Fi,Drama,Horror           0              0             13   \n",
+       "9119          Drama,Comedy,Romance           0              0             15   \n",
+       "9120                     Drama,War           0              0             16   \n",
        "\n",
-       "   user_positive userscore  \n",
-       "0              3       tbd  \n",
-       "1              2       tbd  \n",
-       "2              1       tbd  \n",
-       "3              2       tbd  \n",
-       "4              3       tbd  "
+       "      metascore  user_mixed  user_negative  user_positive userscore  \n",
+       "0            95           0              0              3       tbd  \n",
+       "1            91           1              0              2       tbd  \n",
+       "2            91           0              2              1       tbd  \n",
+       "3            91           0              1              2       tbd  \n",
+       "4            90           0              0              3       tbd  \n",
+       "...         ...         ...            ...            ...       ...  \n",
+       "9116         87           0              0             19       8.2  \n",
+       "9117         90           1              0             28       8.8  \n",
+       "9118         91           0              0              6       8.7  \n",
+       "9119         99           0              1             14       8.8  \n",
+       "9120         91           1              0              3       8.0  \n",
+       "\n",
+       "[9121 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +273,7 @@
     "# load the movies data.\n",
     "csv_file = \"Metacritic Reviews/new_metacritic_movies.csv\"\n",
     "raw_movies_df = pd.read_csv(csv_file)\n",
-    "raw_movies_df.head()"
+    "raw_movies_df"
    ]
   },
   {
@@ -192,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +395,7 @@
        "4                     0  In a year of craptaculars, The Tourist deserve...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,6 +405,221 @@
     "csv_file = \"Metacritic Reviews/metacritic_reviews.txt\"\n",
     "raw_reviews_df = pd.read_csv(csv_file, dtype={4:'str'}, delimiter='\\t')\n",
     "raw_reviews_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>critic_name</th>\n",
+       "      <th>media</th>\n",
+       "      <th>movie_title</th>\n",
+       "      <th>review_date</th>\n",
+       "      <th>individual_meta_score</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Lou Lumenick</td>\n",
+       "      <td>New York Post</td>\n",
+       "      <td>Jolene</td>\n",
+       "      <td>29-Oct-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>So bad it's almost (but not quite) good, Dan I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>J. Hoberman</td>\n",
+       "      <td>Village Voice</td>\n",
+       "      <td>The Nutcracker</td>\n",
+       "      <td>23-Nov-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The wildest thing about this movie is its fait...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Dana Stevens</td>\n",
+       "      <td>Slate</td>\n",
+       "      <td>The Nutcracker</td>\n",
+       "      <td>29-Nov-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>This non-balletic adaptation by the Russian di...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Stephen Holden</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>Hemingway's Garden of Eden</td>\n",
+       "      <td>9-Dec-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>For all the cinematic crimes against him, ther...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Peter Travers</td>\n",
+       "      <td>Rolling Stone</td>\n",
+       "      <td>The Tourist</td>\n",
+       "      <td>10-Dec-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>In a year of craptaculars, The Tourist deserve...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      critic_name               media                 movie_title review_date  \\\n",
+       "0    Lou Lumenick       New York Post                      Jolene   29-Oct-10   \n",
+       "1     J. Hoberman       Village Voice              The Nutcracker   23-Nov-10   \n",
+       "2    Dana Stevens               Slate              The Nutcracker   29-Nov-10   \n",
+       "3  Stephen Holden  The New York Times  Hemingway's Garden of Eden    9-Dec-10   \n",
+       "4   Peter Travers       Rolling Stone                 The Tourist   10-Dec-10   \n",
+       "\n",
+       "   individual_meta_score                                               text  \n",
+       "0                      0  So bad it's almost (but not quite) good, Dan I...  \n",
+       "1                      0  The wildest thing about this movie is its fait...  \n",
+       "2                      0  This non-balletic adaptation by the Russian di...  \n",
+       "3                      0  For all the cinematic crimes against him, ther...  \n",
+       "4                      0  In a year of craptaculars, The Tourist deserve...  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Let's try this as the original CSV\n",
+    "csv_file = \"Metacritic Reviews/metacritic_reviews.csv\"\n",
+    "csv_reviews_df = pd.read_csv(csv_file)\n",
+    "csv_reviews_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "567       Itâ€™s around the halfway point when this film...\n",
+       "6281      Itâ€™s a dispiriting mess and waste of talent,...\n",
+       "6282      While itâ€™s based on the bizarre 2007 story o...\n",
+       "12019     What Hawley has delivered is a garden variety ...\n",
+       "12027     Noah Hawley treats his protagonistâ€™s story a...\n",
+       "12029     It is the story itself that never achieves lif...\n",
+       "12031     But throwing fairy dust in our eyes canâ€™t ma...\n",
+       "19089     Distractingly over-directed ... [Hawley] tripl...\n",
+       "24899     A wildly misbegotten mess, a goulash of incong...\n",
+       "24901     The film has spent so much time telegraphing i...\n",
+       "28501     Sorta-kinda based on the true story of astrona...\n",
+       "39263     Lucy in the Sky is the odd film that starts co...\n",
+       "39264     Lucy In The Sky has ambitious visual flourishe...\n",
+       "39285     Lucy in the Sky becomes a strange experience t...\n",
+       "39294     Itâ€™s always a downer when talented artists p...\n",
+       "49009     As narrow as the universe is wide, this dull, ...\n",
+       "50308     The movie focuses so intently on technical cra...\n",
+       "64627     Lucy In The Sky ends up playing like some unau...\n",
+       "64632     Portman is always consummately watchable, and ...\n",
+       "64640     The significant and seemingly random changes, ...\n",
+       "64641     Unfortunately, itâ€™s an anticlimactic conclus...\n",
+       "64642     Instead of being an intriguing look at an emot...\n",
+       "90762     Lucy in the Skyâ€™s attempt to sync cosmologic...\n",
+       "101857    Natalie Portman excels in Lucy in the Sky, an ...\n",
+       "101858    It is a witty, intriguing film in many ways .....\n",
+       "101905    I have to tip my cap to such a bold attempt to...\n",
+       "126176    Lucy in the Sky is an odd curio, a drama thatâ...\n",
+       "166209    Portmanâ€™s delicate and damaged portrayal is ...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_reviews_df.loc[(csv_reviews_df['movie_title']=='Lucy in the Sky')].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: text, dtype: object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_reviews_df.loc[(csv_reviews_df['critic_name']=='That is fascinating')].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Addy's section\n",
+    "\n",
+    "# Need to create table of movie posters urls from TheMovieDB.org\n",
+    "#\n",
+    "# Choice 1: Lookup table\n",
+    "#    Movie name, poster url\n",
+    "\n",
+    "# Choice 2: Append a new column for poster url to movies_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## write out all df's to postgresql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## test a movie lookup to search for a movie name, which should come back with:\n",
+    "#  movie name, all reviews for the movie, and movie poster url."
    ]
   },
   {
