Completed cleaning the reviews.csv for apostrophes.

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -569,22 +569,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Series([], Name: text, dtype: object)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "csv_reviews_df.loc[(csv_reviews_df['critic_name']=='That is fascinating')].text"
+    "# Need to fix text for the apostrophes that have been convered to â€™"
    ]
   },
   {
