--- a/Project.ipynb
+++ b/Project.ipynb
@@ -573,7 +573,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Need to fix text for the apostrophes that have been convered to â€™"
+    "# Need to fix text for the apostrophes that have been convered to â€™\n",
+    "\n",
+    "# Did Find/Replace using text editor."
    ]
   },
   {
