Completed cleaning data

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -575,7 +575,8 @@
    "source": [
     "# Need to fix text for the apostrophes that have been convered to â€™\n",
     "\n",
-    "# Did Find/Replace using text editor."
+    "# Did Find/Replace using text editor.\n",
+    "# created file Cleaned_metacritic_reviews.csv"
    ]
   },
   {
