--- a/Project.ipynb
+++ b/Project.ipynb
@@ -278,27 +278,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We're going to drop the user reviewed scores, and just stick with the professional critics' scores.\n"
+    "# Reviews data cleaning\n",
+    "\n",
+    "# Previewed in Excel.\n",
+    "# Removed lines of invalid data that appears to have wrapped incorrectly.\n",
+    "\n",
+    "# Need to fix text for the apostrophes that have been convered to â€™\n",
+    "# Did Find/Replace using text editor.\n",
+    "# \n",
+    "# created file Cleaned_metacritic_reviews.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Resaved the reviews csv to Tab delimited instead of comma delimited using Excel. \n",
-    "# The file had entries for quotes from the critics that were complicated by both having quotations and commas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -332,251 +332,136 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Lou Lumenick</td>\n",
-       "      <td>New York Post</td>\n",
-       "      <td>Jolene</td>\n",
-       "      <td>29-Oct-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>So bad it's almost (but not quite) good, Dan I...</td>\n",
+       "      <td>Robbie Collin</td>\n",
+       "      <td>The Telegraph</td>\n",
+       "      <td>Jojo Rabbit</td>\n",
+       "      <td>7-Oct-19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>As satire it's a dismal dereliction of duty; a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>J. Hoberman</td>\n",
-       "      <td>Village Voice</td>\n",
-       "      <td>The Nutcracker</td>\n",
-       "      <td>23-Nov-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>The wildest thing about this movie is its fait...</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Carrie Pilby</td>\n",
+       "      <td>7-Oct-19</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Carrie Pilby never rises to the level of hatef...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>Dana Stevens</td>\n",
-       "      <td>Slate</td>\n",
-       "      <td>The Nutcracker</td>\n",
-       "      <td>29-Nov-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>This non-balletic adaptation by the Russian di...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Empire</td>\n",
+       "      <td>Gemini Man</td>\n",
+       "      <td>7-Oct-19</td>\n",
+       "      <td>40</td>\n",
+       "      <td>It gives you two Will Smiths for the price of ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>Stephen Holden</td>\n",
-       "      <td>The New York Times</td>\n",
-       "      <td>Hemingway's Garden of Eden</td>\n",
-       "      <td>9-Dec-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>For all the cinematic crimes against him, ther...</td>\n",
+       "      <td>Noel Murray</td>\n",
+       "      <td>Los Angeles Times</td>\n",
+       "      <td>In the Tall Grass</td>\n",
+       "      <td>7-Oct-19</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Despite the handsome Craig Wrobleski cinematog...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>Peter Travers</td>\n",
-       "      <td>Rolling Stone</td>\n",
-       "      <td>The Tourist</td>\n",
-       "      <td>10-Dec-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>In a year of craptaculars, The Tourist deserve...</td>\n",
+       "      <td>Jesse Hassenger</td>\n",
+       "      <td>The A.V. Club</td>\n",
+       "      <td>The King</td>\n",
+       "      <td>7-Oct-19</td>\n",
+       "      <td>50</td>\n",
+       "      <td>It's hard to feel energized by a historical ep...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      critic_name               media                 movie_title review_date  \\\n",
-       "0    Lou Lumenick       New York Post                      Jolene   29-Oct-10   \n",
-       "1     J. Hoberman       Village Voice              The Nutcracker   23-Nov-10   \n",
-       "2    Dana Stevens               Slate              The Nutcracker   29-Nov-10   \n",
-       "3  Stephen Holden  The New York Times  Hemingway's Garden of Eden    9-Dec-10   \n",
-       "4   Peter Travers       Rolling Stone                 The Tourist   10-Dec-10   \n",
+       "       critic_name              media        movie_title review_date  \\\n",
+       "0    Robbie Collin      The Telegraph        Jojo Rabbit    7-Oct-19   \n",
+       "1      Roger Moore                NaN       Carrie Pilby    7-Oct-19   \n",
+       "2              NaN             Empire         Gemini Man    7-Oct-19   \n",
+       "3      Noel Murray  Los Angeles Times  In the Tall Grass    7-Oct-19   \n",
+       "4  Jesse Hassenger      The A.V. Club           The King    7-Oct-19   \n",
        "\n",
        "  individual_meta_score                                               text  \n",
-       "0                     0  So bad it's almost (but not quite) good, Dan I...  \n",
-       "1                     0  The wildest thing about this movie is its fait...  \n",
-       "2                     0  This non-balletic adaptation by the Russian di...  \n",
-       "3                     0  For all the cinematic crimes against him, ther...  \n",
-       "4                     0  In a year of craptaculars, The Tourist deserve...  "
+       "0                    20  As satire it's a dismal dereliction of duty; a...  \n",
+       "1                    38  Carrie Pilby never rises to the level of hatef...  \n",
+       "2                    40  It gives you two Will Smiths for the price of ...  \n",
+       "3                    50  Despite the handsome Craig Wrobleski cinematog...  \n",
+       "4                    50  It's hard to feel energized by a historical ep...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the reviews data.\n",
-    "csv_file = \"Metacritic Reviews/metacritic_reviews.txt\"\n",
-    "raw_reviews_df = pd.read_csv(csv_file, dtype={4:'str'}, delimiter='\\t')\n",
+    "csv_file = \"Metacritic Reviews/Cleaned_metacritic_reviews.csv\"\n",
+    "raw_reviews_df = pd.read_csv(csv_file, dtype={3:'str',4:'str'})\n",
     "raw_reviews_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>critic_name</th>\n",
-       "      <th>media</th>\n",
-       "      <th>movie_title</th>\n",
-       "      <th>review_date</th>\n",
-       "      <th>individual_meta_score</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Lou Lumenick</td>\n",
-       "      <td>New York Post</td>\n",
-       "      <td>Jolene</td>\n",
-       "      <td>29-Oct-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>So bad it's almost (but not quite) good, Dan I...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>J. Hoberman</td>\n",
-       "      <td>Village Voice</td>\n",
-       "      <td>The Nutcracker</td>\n",
-       "      <td>23-Nov-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>The wildest thing about this movie is its fait...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Dana Stevens</td>\n",
-       "      <td>Slate</td>\n",
-       "      <td>The Nutcracker</td>\n",
-       "      <td>29-Nov-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>This non-balletic adaptation by the Russian di...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Stephen Holden</td>\n",
-       "      <td>The New York Times</td>\n",
-       "      <td>Hemingway's Garden of Eden</td>\n",
-       "      <td>9-Dec-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>For all the cinematic crimes against him, ther...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Peter Travers</td>\n",
-       "      <td>Rolling Stone</td>\n",
-       "      <td>The Tourist</td>\n",
-       "      <td>10-Dec-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>In a year of craptaculars, The Tourist deserve...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      critic_name               media                 movie_title review_date  \\\n",
-       "0    Lou Lumenick       New York Post                      Jolene   29-Oct-10   \n",
-       "1     J. Hoberman       Village Voice              The Nutcracker   23-Nov-10   \n",
-       "2    Dana Stevens               Slate              The Nutcracker   29-Nov-10   \n",
-       "3  Stephen Holden  The New York Times  Hemingway's Garden of Eden    9-Dec-10   \n",
-       "4   Peter Travers       Rolling Stone                 The Tourist   10-Dec-10   \n",
-       "\n",
-       "   individual_meta_score                                               text  \n",
-       "0                      0  So bad it's almost (but not quite) good, Dan I...  \n",
-       "1                      0  The wildest thing about this movie is its fait...  \n",
-       "2                      0  This non-balletic adaptation by the Russian di...  \n",
-       "3                      0  For all the cinematic crimes against him, ther...  \n",
-       "4                      0  In a year of craptaculars, The Tourist deserve...  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Let's try this as the original CSV\n",
-    "csv_file = \"Metacritic Reviews/metacritic_reviews.csv\"\n",
-    "csv_reviews_df = pd.read_csv(csv_file)\n",
-    "csv_reviews_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "567       Itâ€™s around the halfway point when this film...\n",
-       "6281      Itâ€™s a dispiriting mess and waste of talent,...\n",
-       "6282      While itâ€™s based on the bizarre 2007 story o...\n",
-       "12019     What Hawley has delivered is a garden variety ...\n",
-       "12027     Noah Hawley treats his protagonistâ€™s story a...\n",
-       "12029     It is the story itself that never achieves lif...\n",
-       "12031     But throwing fairy dust in our eyes canâ€™t ma...\n",
-       "19089     Distractingly over-directed ... [Hawley] tripl...\n",
-       "24899     A wildly misbegotten mess, a goulash of incong...\n",
-       "24901     The film has spent so much time telegraphing i...\n",
-       "28501     Sorta-kinda based on the true story of astrona...\n",
-       "39263     Lucy in the Sky is the odd film that starts co...\n",
-       "39264     Lucy In The Sky has ambitious visual flourishe...\n",
-       "39285     Lucy in the Sky becomes a strange experience t...\n",
-       "39294     Itâ€™s always a downer when talented artists p...\n",
-       "49009     As narrow as the universe is wide, this dull, ...\n",
-       "50308     The movie focuses so intently on technical cra...\n",
-       "64627     Lucy In The Sky ends up playing like some unau...\n",
-       "64632     Portman is always consummately watchable, and ...\n",
-       "64640     The significant and seemingly random changes, ...\n",
-       "64641     Unfortunately, itâ€™s an anticlimactic conclus...\n",
-       "64642     Instead of being an intriguing look at an emot...\n",
-       "90762     Lucy in the Skyâ€™s attempt to sync cosmologic...\n",
-       "101857    Natalie Portman excels in Lucy in the Sky, an ...\n",
-       "101858    It is a witty, intriguing film in many ways .....\n",
-       "101905    I have to tip my cap to such a bold attempt to...\n",
-       "126176    Lucy in the Sky is an odd curio, a drama thatâ...\n",
-       "166209    Portmanâ€™s delicate and damaged portrayal is ...\n",
+       "11     The film has spent so much time telegraphing i...\n",
+       "20     But throwing fairy dust in our eyes can't make...\n",
+       "23     It's always a downer when talented artists pou...\n",
+       "41     It's around the halfway point when this film's...\n",
+       "42     It's a dispiriting mess and waste of talent, s...\n",
+       "43     While it's based on the bizarre 2007 story of ...\n",
+       "45     It is the story itself that never achieves lif...\n",
+       "49     Sorta-kinda based on the true story of astrona...\n",
+       "50     Lucy in the Sky becomes a strange experience t...\n",
+       "58     The movie focuses so intently on technical cra...\n",
+       "61     The significant and seemingly random changes, ...\n",
+       "62     Unfortunately, it's an anticlimactic conclusio...\n",
+       "63     Instead of being an intriguing look at an emot...\n",
+       "77     I have to tip my cap to such a bold attempt to...\n",
+       "87     Lucy in the Sky is an odd curio, a drama that'...\n",
+       "100    Portman's delicate and damaged portrayal is me...\n",
+       "137    Portman is always consummately watchable, and ...\n",
+       "143    Lucy in the Sky's attempt to sync cosmological...\n",
+       "159    Noah Hawley treats his protagonist's story as ...\n",
+       "162    Lucy In The Sky ends up playing like some unau...\n",
+       "485    What Hawley has delivered is a garden variety ...\n",
+       "606    Distractingly over-directed ... [Hawley] tripl...\n",
+       "608    A wildly misbegotten mess, a goulash of incong...\n",
+       "613    Lucy in the Sky is the odd film that starts co...\n",
+       "614    Lucy In The Sky has ambitious visual flourishe...\n",
+       "619    As narrow as the universe is wide, this dull, ...\n",
+       "638    Natalie Portman excels in Lucy in the Sky, an ...\n",
+       "639    It is a witty, intriguing film in many ways .....\n",
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_reviews_df.loc[(csv_reviews_df['movie_title']=='Lucy in the Sky')].text"
+    "raw_reviews_df.loc[(raw_reviews_df['movie_title']=='Lucy in the Sky')].text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Need to fix text for the apostrophes that have been convered to â€™\n",
-    "\n",
-    "# Did Find/Replace using text editor.\n",
-    "# created file Cleaned_metacritic_reviews.csv"
+    "## Cleanup complete"
    ]
   },
   {
