--- a/Project.ipynb
+++ b/Project.ipynb
@@ -527,6 +527,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/eUL2USo8weZHhNMJuWwKtegJzhL.jpg'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# not sure why this movie is one that has the values in the tuple swapped.\n",
+    "\n",
+    "movieTitle=quote('No Home Movie')\n",
+    "temp = 'http://api.themoviedb.org/3/search/movie?query=' + movieTitle + '&api_key=3d48b9204ca053957eb4375bb97a83c8'\n",
+    "#print(temp)\n",
+    "r = requests.get(temp)\n",
+    "response = r.json()\n",
+    "response['results'][0]['poster_path']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -570,9 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2648,11 +2673,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# No clue why the title and url would get swapped like that!! :-/"
+    "# No clue why the title and url would get swapped like that!! :-/\n"
    ]
   },
   {
