more updates. (no functionality changes)

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -470,7 +470,7 @@
     "# This is what happens if the movie title has # in it.\n",
     "\n",
     "movieTitle=quote('#Horror')\n",
-    "temp = 'http://api.themoviedb.org/3/search/movie?query=' +movieTitle + '&api_key=3d48b9204ca053957eb4375bb97a83c8'\n",
+    "temp = 'http://api.themoviedb.org/3/search/movie?query=' + movieTitle + '&api_key=3d48b9204ca053957eb4375bb97a83c8'\n",
     "print(temp)\n",
     "#r = requests.get(temp)\n",
     "#response = r.json()\n",
@@ -567,8 +567,11 @@
    ],
    "source": [
     "url_list = []\n",
+    "\n",
+    "# the following 2 lists aren't needed since we're just writing them to a file.\n",
     "#movie_not_found_list = []\n",
     "#poster_not_found_list = []\n",
+    "\n",
     "processed_count = len(raw_movies_df)\n",
     "movies_not_found_count = 0\n",
     "posters_not_found_count = 0\n",
@@ -612,7 +615,7 @@
     "        #Print a period every iteration so that we know this is still running\n",
     "        processed_count -= 1\n",
     "        if (processed_count % 25 == 0):\n",
-    "            print(processed_count, end = '')\n",
+    "            print(processed_count, end = '') # print the number left on every count divisable by 25.\n",
     "        print('.', end = '')\n",
     "        \n",
     "    except KeyError:\n",
@@ -620,9 +623,11 @@
     "        keyerrors_count += 1\n",
     "        keyerrors_f.write(title + '\\n')\n",
     "    \n",
+    "# close the files.\n",
     "keyerrors_f.close()\n",
     "movies_not_found_f.close()\n",
     "posters_not_found_f.close()\n",
+    "\n",
     "print('\\n\\n-----------------------------')\n",
     "print('Data Retrieval Complete')\n",
     "print('-----------------------------')\n",
